----------------------------------------------------------------------
 OmegaT 5.4.0
----------------------------------------------------------------------
  1 Enhancements
  2 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.4.0 vs 5.3.0

  Implemented requests:

  - Sync file deletions from repository to project
  https://sourceforge.net/p/omegat/feature-requests/1499/

  Bug fixes:

  - cannot create new (teamp) project in empty repository
  https://sourceforge.net/p/omegat/bugs/1005/

  - leading whitespace not trimmed in html filter when compressing whitespace
  https://sourceforge.net/p/omegat/bugs/1006/

----------------------------------------------------------------------
 OmegaT 5.3.0 (2020-08-03)
----------------------------------------------------------------------
  6 Enhancements
  9 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
5.3.0 vs 5.2.0

  Implemented requests:

  - Display concordance hits from auto/enforce TMX files first
  https://sourceforge.net/p/omegat/feature-requests/1283/

  - Support reading metadata from plugins and display in UI
  https://sourceforge.net/p/omegat/feature-requests/1434/

  - Add a "file" type to repository type
  https://sourceforge.net/p/omegat/feature-requests/1446/

  - Configurable Fuzzy Matches Threshold
  https://sourceforge.net/p/omegat/feature-requests/1450/

  - Mozilla .ftl files filter
  https://sourceforge.net/p/omegat/feature-requests/1479/

  - Support Yandex.Cloud machine translation
  https://sourceforge.net/p/omegat/feature-requests/1494/

  Bug fixes:

  - application_startup event could fail to execute scripts
  https://sourceforge.net/p/omegat/bugs/860

  - Fix wrong translated word from 'Term' in `Bundle_ko.properties`
  https://sourceforge.net/p/omegat/bugs/939/

  - Alternative translations are not taken into account if no default
  translation is set