@@ -1,0 +1,21 @@
+ <hTmL>
+
+ <body  dir="ltr">
+test spaces
+<p> test spaces </p> outoftags
+<p> This <b>is bold</b>! </p>
+ <p> </p>
+
+ <p> <BR> </p>
+ <pre>
+
+    </pre>
+ <pre>  formatted
+    text
+    </pre>
+ <!--    a   comment  -->
+
+ <p> a <!--   com   mment   --> </p>
+ </body>
+
+ </hTmL>
