@@ -2,7 +2,7 @@
  OmegaT 5.4.0
 ----------------------------------------------------------------------
   1 Enhancements
-  2 Bug fixes
+  3 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
 5.4.0 vs 5.3.0
@@ -19,6 +19,11 @@
 
   - leading whitespace not trimmed in html filter when compressing whitespace
   https://sourceforge.net/p/omegat/bugs/1006/
+
+  - "<pre>    </pre> is compressed
+  - without compression, leading and trailing whitespace is duplicated
+  - whitespace before comment moves to after comment
+  https://sourceforge.net/p/omegat/bugs/1007/
 
 ----------------------------------------------------------------------
  OmegaT 5.3.0 (2020-08-03)
